# picomesh

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  README_ja.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TEST_CHATGPT.md  library.json  library.properties
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_validation.yml
.github/workflows/: arduino.yml  ci.yml  codeql.yml  coverage.yml  docs.yml  fuzz-smoke.yml  pico-sdk.yml  platformio.yml  python-tools.yml  release-readiness.yml  release.yml  static-analysis.yml
cmake/: PicoMeshConfig.cmake.in
docs/: aeterna_extraction.md  api_reference.md  architecture.md  compatibility.md  distribution.md  examples.md  faq.md  getting_started.md  hardware_validation.md  hardware_wiring.md  maintainer_automation.md  project_boundary.md  protocol.md  protocol_vectors.md  resource_limits.md  static_analysis.md  testing.md  use_cases.md  windows_pico_build.md
docs/validation/: v0.1.0-rc1.md
examples/: frame_codec_example.cpp  host_simulator.cpp  lossy_link_simulator.cpp  malformed_link_simulator.cpp  reliable_queue_example.cpp
examples/ArduinoHeartbeatController/: ArduinoHeartbeatController.ino
examples/ArduinoHeartbeatNode/: ArduinoHeartbeatNode.ino
examples/ArduinoMultiNodeController/: ArduinoMultiNodeController.ino
examples/ArduinoReliableCommandController/: ArduinoReliableCommandController.ino
examples/PicoSdkI2cNode/: CMakeLists.txt  main.cpp
include/picomesh/: checksum.h  frame.h  node_registry.h  reliability.h  sequence_tracker.h  stream_decoder.h  transport.h  version.h
ports/arduino/: README.md
ports/pico-sdk/: CMakeLists.txt  README.md  picomesh_pico_transport.cpp  picomesh_pico_transport.h
scripts/: build_pico_windows.ps1  check_release_metadata.py  check_source_archive.py  summarize_serial_log.py
src/: PicoMesh.h  checksum.cpp  frame.cpp  node_registry.cpp  reliability.cpp  sequence_tracker.cpp  stream_decoder.cpp
src/arduino/: wire_transport.cpp  wire_transport.h
src/picomesh/: checksum.h  frame.h  node_registry.h  reliability.h  sequence_tracker.h  stream_decoder.h  transport.h  version.h
tests/: fuzz_frame_decoder.cpp  test_core.cpp  test_main.cpp  test_protocol_vectors.cpp  test_reliability_stream.cpp  test_support.h
tests/cmake_consumer/: CMakeLists.txt  main.cpp
tests/python/: test_summarize_serial_log.py
